tests/build/widget/new_fn_must_take_at_least_one.stderr
error: `new` must take at least one input that implements `UiNode`
 --> $DIR/new_fn_must_take_at_least_one.rs:5:11
  |
5 |     fn new() {}
  |           ^^
